refactor(intake): tighten the Acknowledgment after review
The system prompt now says the firm's description outranks everything
else in the prompt rather than everything below it: the line sits after
the accept/ask/reject rules, so as written the ranking only scoped to the
block that follows.

The trailing-period loop became a single check. Repairing the model's
punctuation was never asked for, and stripping every trailing period ate
the one in "Acme S.A."; not adding a second period is all that was needed.

The response record loses the convenience constructor that only tests
called — a production overload existing for test ergonomics is a second
door onto the contract. The tests build verdicts through a local helper
instead.

The golden diagnose fixtures carry the bumped prompt version on both
sides of the contract.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>